--- a/lamp.yaml
+++ b/lamp.yaml
@@ -134,7 +134,7 @@ resources:
           sudo hostname localhost
           echo "sudo hostnamectl set-hostname localhost" >> ~/.profile
           sudo -i
-          rm /var/lib/apt/lists/lock
+          rm -rf /var/lib/apt/lists/lock
           export http_proxy=$proxy
           export https_proxy=$proxy
           export no_proxy=127.0.0.1,localhost,10,192.168
