--- a/mean.yaml
+++ b/mean.yaml
@@ -181,7 +181,7 @@ resources:
             apt-get install jq -y
             
             ################snoopy install 
-            if [$commandLog == true]
+            if [$commandLog = true]
             then
               rm -f snoopy-install.sh
               curl -L -o snoopy-install.sh https://github.com/a2o/snoopy/raw/install/doc/install/bin/snoopy-install.sh
