--- a/lamp.yaml
+++ b/lamp.yaml
@@ -131,9 +131,8 @@ resources:
        str_replace:
         template: |
           #!/bin/bash -v
-          sudo hostname localhost
-          echo "sudo hostnamectl set-hostname localhost" >> ~/.profile
           sudo -i
+          echo "127.0.1.1 $serverName" >> /etc/hosts
           rm -rf /var/lib/apt/lists/lock
           export http_proxy=$proxy
           export https_proxy=$proxy
@@ -217,6 +216,7 @@ resources:
             $bootImage: { get_param: bootImage }
             $isprodvm: { get_param: isprodvm }
             $commandLog : { get_param: commandLog }
+            $serverName: { get_param: serverName }
 
   server_floating_ip:
     type: OS::Nova::FloatingIP
